# decomp-permuter

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  USAGE.md  arm32_compile_example.sh  ast_types.py  ast_util.py  candidate.py  compiler.py  default_weights.toml  diff.sh  example_decompme_mappings.toml  example_settings.toml  helpers.py  import.py  iter_util.py  main.py  main_randomizer.py  mwcc_usage.md  mwcceppc_compile_example.sh  mypy.ini  objdump.sh  pah.py  permuter.py  permuter_settings_example.toml  prelude.inc  preprocess.py  profiler.py  pyproject.toml  randomization_weights.toml  randomization_weights_presets.toml  randomizer.py  run_example.sh  scorer.py  server.py  simplify_objdump.py  strip_other_fns.py  test.py  test_struct_ref.c  (+2 more)
authserver/: .gitignore  README.md  rebar.config  run.sh  setup.erl  src
example/: compile.sh
example_configs/: compile_mips_gcc.sh  compile_mwcc_arm32.sh  compile_mwcceppc.sh
new_tools/: diff_count_lines.sh  mwcc_compile_and_dump.sh  post_process_dump.js  prepare_dump_for_diff.js
pahserver/: .gitignore  Cargo.toml
pahserver/src/: client.rs  db.rs  main.rs  port.rs  save.rs  server.rs  setup.rs  util.rs
perm/: __init__.py  perm.py  perm_eval.py  perm_gen.py
perm_pycparser/: README  _build_tables.py  c_parser.py  test.py
src/: ast_types.py  ast_util.py  candidate.py  client.py  compiler.py  error.py  helpers.py  main.py  objdump.py  permuter.py  preprocess.py  printer.py  profiler.py  randomizer.py  scorer.py  server_main.py
test/: compile.sh  test_deduplicate_typedefs.py  test_general.c  test_once.c  (+6 more)
(+80 files in other folders)
