[package]
name = "pahserver"
version = "0.0.1"
edition = "2018"
default-run = "pahserver"

[dependencies]
tokio = { version = "1", features = ["full"] }
sodiumoxide = "0.2"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_tuple = "0.5"
hex = "0.4"
structopt = "0.3"
tempfile = "3"
slotmap = "1"
miniz_oxide = "0.4"
ordered-float = "2.1"
pin-project = "1"
